fix spacing in donor sub-lists

--- a/css/landing.css
+++ b/css/landing.css
@@ -138,6 +138,9 @@
   font-size: 18px;
   margin: 0 0 1.5em 0;
 }
+#news-and-benefits-and-funders.row-fluid #benefits-and-funders ul.donors {
+  margin: 0 0 2em 0;
+}
 #news-and-benefits-and-funders.row-fluid #benefits-and-funders ul.donors li {
   margin: 0 0 0.5em 0;
 }
@@ -154,9 +157,6 @@
 }
 #news-and-benefits-and-funders.row-fluid li a:hover {
   color: #09c9ff;
-}
-#news-and-benefits-and-funders.row-fluid h5 {
-  font-weight: 600;
 }
 @media (max-width: 600px) {
   #news-and-benefits-and-funders.row-fluid #news,
